--- a/app/src/main/res/layout/activity_high_scores.xml
+++ b/app/src/main/res/layout/activity_high_scores.xml
@@ -7,17 +7,26 @@
     android:background="@drawable/stars_background"
     tools:context=".HighScoresActivity">
 
-    <TextView
-        android:id="@+id/tvHighscoresTitle"
-        android:layout_width="300dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="20dp"
-        android:text="High Scores"
-        android:textAlignment="center"
-        android:textColor="#FFEB3B"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/llHSScrollLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvHighscoresTitle"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_marginTop="20dp"
+                android:text="High Scores"
+                android:textAlignment="center"
+                android:textColor="#FFEB3B"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
