--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -15,9 +15,22 @@
         android:text="Credits"
         android:textAlignment="center"
         android:textColor="#FFEB3B"
-        android:textSize="50sp"
+        android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="336dp"
+        android:layout_height="315dp"
+        android:layout_marginTop="50dp"
+        android:fontFamily="monospace"
+        android:text="Le jeu SpacETML a été developpé par Lucas Charbonnier et Valentin Trana."
+        android:textColor="#F57F17"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCreditsTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
